# Automated_alignment

projection_mapping/: README.md  pyproject.toml
projection_mapping/config/: default.yaml
projection_mapping/data/calibration/: projector_1_homography.npy
projection_mapping/data/calibration/homographies/: projector_1.npy
projection_mapping/data/marker_calibration/: projector_1_markers.yaml
projection_mapping/scripts/: alignment_with_markers.py  calibrate_natural_features.py  collect_calibration_images.py  previous_with_markers.py  project_with_homography.py  quick_calibrate.py  run_alignment_loop.py  test_detection_only.py  test_evfsam_on_house.py
projection_mapping/src/projector_mapper/: __init__.py  config.py  pipeline.py
projection_mapping/src/projector_mapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
projection_mapping/src/projector_mapper/alignment/: __init__.py  icp_aligner.py
projection_mapping/src/projector_mapper/calibration/: __init__.py  camera_projector.py
projection_mapping/src/projector_mapper/detection/: __init__.py  base.py  fal_evfsam.py  roboflow.py
projection_mapping/src/projector_mapper/feedback/: __init__.py  homography_refiner.py  overlay_tracker.py
projection_mapping/src/projector_mapper/geometry/: __init__.py  homography.py
projection_mapping/src/projector_mapper/masking/: __init__.py  mask_builder.py
projection_mapping/src/projector_mapper/projection/: __init__.py  mapper.py
projection_mapping/tests/: conftest.py  test_config.py  test_fal_api_simple.py  test_fal_evfsam.py
(+2 files in other folders)
